--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,16 @@ python:
 
 install:
   - pip install -r requirements/local.txt
+  - pip install coveralls
 
 env:
   - DJANGO_SETTINGS_MODULE=config.settings.local
 
 script:
   - python runtests.py
+  - coverage run --source=. manage.py test
+
+after_success:coveralls
 
 branches:
   only:
